--- a/index.html
+++ b/index.html
@@ -1,11 +1,319 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEEEEEEEEEEEEEEEEEEEB</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>WebPage</title>
+    </head>
+    <body>
+        <header id="header">
+            <div class="logo">
+                <h3 class="logo-text"><h3 id="colored">JEZ</h3> SALAD</h3>
+            </div>
+            <nav>
+                <a href="#" class="header-link" id="colored">Home</a>
+                <a href="#" class="header-link">Menu</a>
+                <a href="#" class="header-link">Contact</a>
+                <a href="#" class="header-link">About us</a>
+                <button class="sign-up-button">Sign up</button>
+            </nav>
+        </header>
+        <main class="main">
+            <section class="container-front-page">
+                <section class="container-front-page-text">
+                    <div class="#1-container">
+                        <p class="#1-container-text" id="colored">#1 Best Healthy Salad</p>
+                    </div>
+                    <h1 class="first-page-text">
+                        <h1 class="skip-text" id="colored">Skip</h1> The Diet, Just Eat
+                        Healthy With Jez Salad
+                    </h1>
+                    <p class="skip-text-under">
+                        Imagine you don't need a diet because we provide healthy
+                        and delicious food for you!
+                    </p>
+                    <button class="order-food-button" id="colored">Order Food</button>
+                    <div class="header-stats">
+                        <div class="header-stats">
+                            <p class="header-stats-text">5.000+</p>
+                            <span class="header-stats-undertext">
+                                Customer
+                            </span>
+                        </div>
+                        <div class="header-stats">
+                            <p class="header-stats-text">8.000+</p>
+                            <span class="header-stats-undertext">
+                                Delivery
+                            </span>
+                        </div>
+                        <div class="header-stats">
+                            <p class="header-stats-text">1.000+</p>
+                            <span class="header-stats-undertext">
+                                Ratings
+                            </span>
+                        </div>
+                    </div>
+                </section>
+                <section class="container-front-page-img">
+                    <img
+                        src="images/heart-icon.svg"
+                        alt="background-heart-icon"
+                    />
+                    <img
+                        src="images/header-image.png"
+                        alt="header-image-woman"
+                    />
+                    <img
+                        src="images/background-dots.svg"
+                        alt="background-dots"
+                    />
+                    <div class="customer-comment-contaier">
+                        <aside class="smile-icon">
+                            <img src="images/smile-icon.svg" alt="smile-icon"/>
+                        </aside>
+                        <header class="customer-comment">
+                            <p class="customer-comment-text">Our Happy Customer</p>
+                            <img src="images/star-icon.svg" alt="star-icon">
+                            <p class="customer-comment-text-rating">4.9</p>
+                            <span class="customer-comment-text-reviews">(1.989 reviews)</span>
+                        </header>
+                    </div>
+                    <div class="calories-rating">
+                        <div class="calories-rating-text-container">
+                            <p class="calories-rating-text">Daily Calories</p>
+                            <h3 class="calories-rating-text-number">123 </h3><p class="calories-rating-text-cal">Cal</p>
+                        </div>
+                        <div class="calories-progress-bars">
+                            <progress class="calories-progress-bar" value="30" max="100"></progress>
+                            <progress class="calories-progress-bar" value="50" max="100"></progress>
+                            <progress class="calories-progress-bar" value="60" max="100"></progress>
+                            <progress class="calories-progress-bar" value="55" max="100"></progress>
+                            <progress class="calories-progress-bar" value="50" max="100"></progress>
+                            <progress class="calories-progress-bar" value="70" max="100"></progress>
+                            <progress class="calories-progress-bar" value="80" max="100"></progress>
+                            <progress class="calories-progress-bar" value="90" max="100"></progress>
+                        </div>
+                    </div>
+                </section>
+            </section>
+            <section class="container-second-page">
+                <section class="second-page-text">
+                    <section class="second-page-text-big">
+                        <h1 class="second-page-text-1">WHY CHOOSE US FOR <h1 id="colored">YOUR HEALTY FOOD</h1></h1>
+                    </section>
+                    <section class="second-page-text-small">
+                        <p class="second-page-text-2">We continue to consistently choose and maintain the quality of the fruit served, so that it remains fresh and nutritious when you eat it.</p>
+                    </section>
+                </section>
+                <section class="second-page-cards">
+                    <article class="second-page-single-card">
+                        <div class="card-photo-space">
+                            <img src="images/first-card-icon.svg" alt="card-1"/>
+                        </div>
+                        <div class="card-text">
+                            <h2 class="card-text-main">Own fruit orchard</h2>
+                            <p class="card-description">Langsung dari Kebun Sendiri yang tersebar di setiap provinsi yang memiliki cabang toko Jez Salad</p>
+                        </div>
+                        <div class="card-link-container">
+                            <a href="#">Learn more</a>
+                            <img src="images/right-arrow.svg" alt="right-arrow"/>
+                        </div>
+                    </article>
+                    <article class="second-page-single-card">
+                        <div class="card-photo-space">
+                            <img src="images/second-card-icon.svg" alt="card-2"/>
+                        </div>
+                        <div class="card-text">
+                            <h2 class="card-text-main">#1 Healthy Fruit Salad</h2>
+                            <p class="card-description">The pioneer of healthy fruit salads that are delicious & suitable for all people with the best quality assurance.</p>
+                        </div>
+                        <div class="card-link-container" id="colored">
+                            <a href="#">Learn more</a>
+                            <img src="images/right-arrow.svg" alt="right-arrow"/>
+                        </div>
+                    </article>
+                    <article class="second-page-single-card">
+                        <div class="card-photo-space">
+                            <img src="images/third-card-icon.svg" alt="card-3"/>
+                        </div>
+                        <div class="card-text">
+                            <h2 class="card-text-main">100 Top Brand</h2>
+                            <p class="card-description">We are one of the best brands in the Food and Beverage sector in Indonesia.</p>
+                        </div>
+                        <div class="card-link-container">
+                            <a href="#">Learn more</a>
+                            <img src="images/right-arrow.svg" alt="right-arrow"/>
+                        </div>
+                    </article>
+                </section>
+            </section>
+            <section class="container-third-page">
+                <section class="third-page-text">
+                    <h1 class="third-page-text-1">What Are People<br> Saying <h1 id="colored">About Us</h1></h1>
+                    <p class="third-page-text-2">We are very happy if you are satisfied with our service and products, let's read pure reviews from customers who bought our products.</p>
+                    <div class="third-page-cards-numeration">
+                        <h1 class="third-page-cards-numeration-main">02</h1><span class="third-page-cards-numeration-second">/05</span>
+                    </div>
+                    <div class="third-page-cards-arrows">
+                        <!-- єсі що не видно стрілку вліво бо вона сама біла -->
+                        <div class="third-page-cards-left-arrow">
+                            <img class="third-page-not-activated-arrow" src="images/left-arrow.svg" alt="left-arrow"/>
+                        </div>
+                        <div class="third-page-cards-right-arrow">
+                            <img class="third-page-activated-arrow" src="images/right-arrow.svg" alt="right-arrow"/>
+                        </div>
+                    </div>
+                </section>
+                <section class="third-page-cards">
+                    <article class="third-page-single-card">
+                        <div class="third-page-card">
+                            <div class="third-page-card-photo-space">
+                                <img src="images/reviewer-1.svg" alt="reviewer-card-1"/>
+                            </div>
+                            <div class="third-page-card-text">
+                                <h2 class="reviwer-name">Selena Gomz</h2>
+                                <span class="reviewer-age">22 Years</span>
+                                <p class="reviewer-review">The salad is fresh!!! Don't ask about the sauce again, it's really delicious, it's going to be routine. I recommend this salad to all of you guys! because they really take care of the quality.</p>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="third-page-single-card">
+                        <div class="third-page-card">
+                            <div class="third-page-card-photo-space">
+                                <img src="images/reviewer-2.svg" alt="reviewer-card-2"/>
+                            </div>
+                            <div class="third-page-card-text">
+                                <h2 class="reviwer-name">David Ken</h2>
+                                <span class="reviewer-age">24 Years</span>
+                                <p class="reviewer-review">The salad is fresh!!! Don't ask about the sauce again, it's really delicious, it's going to be routine. I recommend this salad to all of you guys! because they really take care of the quality.</p>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="third-page-single-card">
+                        <div class="third-page-card">
+                            <div class="third-page-card-photo-space">
+                                <img src="images/reviewer-3.svg" alt="reviewer-card-3"/>
+                            </div>
+                            <div class="third-page-card-text">
+                                <h2 class="reviwer-name">Jennifer Sina</h2>
+                                <span class="reviewer-age">21 Years</span>
+                                <p class="reviewer-review">The salad is fresh!!! Don't ask about the sauce again, it's really delicious, it's going to be routine. I recommend this salad to all of you guys! because they really take care of the quality.</p>
+                            </div>
+                        </div>
+                    </article>
+                </section>
+            </section>
+            <section class="fourth-page">
+                <section class="fourth-page-text">
+                    <div class="fourth-page-text-small-container">
+                        <h3 class="fourth-page-text-small" id="colored">MENU YANG MEMBUATMU JATUH CINTA</h3>
+                    </div>
+                    <div class="fourth-page-text-big">
+                        <h1 class="fourth-page-text-big">ENJOY THE BEST MENU AND GET</h1><h1 id="colored">DISCOUNTS</h1><h1 class="fourth-page-text-big"> AVAILABLE</h1>
+                    </div>
+                </section>
+                <section class="fourth-page-cards">
+                    <article class="fourth-page-single-card">
+                        <div class="fourth-page-card">
+                            <div class="fourth-page-card-photo-space">
+                                <img src="images/dish-card-1.png" alt="alt-card-1"/>
+                                <div class="fourth-page-card-text-container">
+                                    <h3 class="fourth-page-card-text">Mini Salad Yummy</h3>
+                                    <h2 class="fourth-page-card-text-price">$ 2.99</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="fourth-page-single-card">
+                        <div class="fourth-page-card">
+                            <div class="fourth-page-card-photo-space">
+                                <img src="images/dish-card-2.png" alt="alt-card-2"/>
+                                <div class="fourth-page-card-text-container">
+                                    <h3 class="fourth-page-card-text">Mini Salad Yummy</h3>
+                                    <h2 class="fourth-page-card-text-price">$ 2.99</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="fourth-page-single-card">
+                        <div class="fourth-page-card">
+                            <div class="fourth-page-card-photo-space">
+                                <img src="images/dish-card-3.png" alt="alt-card-3"/>
+                                <div class="fourth-page-card-text-container">
+                                    <h3 class="fourth-page-card-text">Mini Salad Yummy</h3>
+                                    <h2 class="fourth-page-card-text-price">$ 2.99</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                </section>
+            </section>
+            <section class="fifth-page">
+                <section class="fifth-page-subscription">
+                    <img src="images/subscription-background-lines.svg" alt="subscription-background"/>
+                    <div class="fifth-page-subscription-small-main-text-container">
+                        <h4 class="fifth-page-subscription-small-main-text" id="colored">Our Subscribe</h4>
+                    </div>
+                    <div class="fifth-page-subscription-big-main-text-container">
+                        <h2 class="fifth-page-subscription-big-main-text">Subscribe To Get The Latest<br>Promo from Jez Salad</h2>
+                    </div>
+                    <div class="fifth-page-subscription-main-undertext-container">
+                        <p class="fifth-page-subscription-main-undertext">We recommended you to subscribe to our promo program,<br> drop your email below to get daily update about us</p>
+                    </div>
+                    <div class="fifth-page-subscription-email-input-container">
+
+                        <!-- <div class="fifth-page-subscription-email-input">
+                            <input type="email" id="email" placeholder="Enter your email address">
+                        </div>
+                        <div class="fifth-page-subscription-email-submit">
+                            <button id="colored">Subscribe</button>
+                            <a id="colored" href="#">Subsribe</a>
+                        </div> -->
+
+                        <input type="email" id="email" placeholder="Enter your email address">
+                        <!-- <button id="colored">Subscribe</button> -->
+                        <a id="colored" href="#">Subsribe</a>
+                    </div>
+                </section>
+            </section>
+            <footer id="footer">
+                <section id="copyright">
+                    <div class="logo">
+                        <h3 class="logo-text"><h3 id="colored">JEZ</h3> SALAD</h3>
+                    </div>
+                    <p class="footer-copyright-text">Jez Salad is the pioneer of healthy fruit salad with high nutrition.</p>
+                    <p class="footer-copyright">©Copyright Jez Salad</p>
+                </section>
+                <nav id="footer-links">
+                    <a href="#" class="header-link" id="colored">Feature</a>
+                    <a href="#" class="header-link">Menu</a>
+                    <a href="#" class="header-link">Promo</a>
+                    <a href="#" class="header-link">Contact</a>
+                    <a href="#" class="header-link">About us</a>
+                </nav>
+                <section id="get-in-touch">
+                    <h3 class="get-in-touch-text" id="colored">Get in Touch</h3>
+                    <div class="footer-location">
+                        <img src="images/location_icon.svg" alt="location-icon"/>
+                        <p class="footer-location-text">8819 Ohio St. South Gate, CA 90280</p>
+                    </div>
+                    <div class="footer-email">
+                        <img src="images/email-icon.svg" alt="email-icon"/>
+                        <p class="footer-email-text">Ourstudio@hello.com</p>
+
+                    </div>
+                    <div class="footer-phone">
+                        <img src="images/phone-icon.svg" alt="phone-icon"/>
+                        <p class="footer-phone-text">+1 386-688-3295</p>
+                    </div>
+                </section>
+                <section id="social-links">
+                    <img src="images/twitter-icon.svg" alt="twitter-icon"/>
+                    <img src="images/linkedin-icon.svg" alt="linkedin-icon"/>
+                    <img src="images/insta-icon.svg" alt="insta-icon"/>
+                    <p class="footer-social-links-text">Follow our social media.</p>
+                </section>
+            </footer>
+        </main>
+    </body>
 </html>
