--- a/index.html
+++ b/index.html
@@ -300,7 +300,6 @@
                     <div class="footer-email">
                         <img src="images/email-icon.svg" alt="email-icon"/>
                         <p class="footer-email-text">Ourstudio@hello.com</p>
-
                     </div>
                     <div class="footer-phone">
                         <img src="images/phone-icon.svg" alt="phone-icon"/>
@@ -308,9 +307,9 @@
                     </div>
                 </section>
                 <section id="social-links">
-                    <img src="images/twitter-icon.svg" alt="twitter-icon"/>
-                    <img src="images/linkedin-icon.svg" alt="linkedin-icon"/>
-                    <img src="images/insta-icon.svg" alt="insta-icon"/>
+                    <a href=""><img src="images/twitter-icon.svg" alt="twitter-icon"/></a>
+                    <a href=""><img src="images/linkedin-icon.svg" alt="linkedin-icon"/></a>
+                    <a href=""><img src="images/insta-icon.svg" alt="insta-icon"/></a>
                     <p class="footer-social-links-text">Follow our social media.</p>
                 </section>
             </footer>
