added classes to images, changed paragraphs to span

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div class="logo">
                 <h3 class="logo-text"><h3 id="colored">JEZ</h3> SALAD</h3>
             </div>
-            <nav>
+            <nav class="header-nav">
                 <a href="#" class="header-link" id="colored">Home</a>
                 <a href="#" class="header-link">Menu</a>
                 <a href="#" class="header-link">Contact</a>
@@ -19,13 +19,13 @@
             </nav>
         </header>
         <main class="main">
-            <section class="container-front-page">
-                <section class="container-front-page-text">
+            <section class="container-first-page">
+                <section class="container-first-page-text">
                     <div class="#1-container">
                         <p class="#1-container-text" id="colored">#1 Best Healthy Salad</p>
                     </div>
                     <h1 class="first-page-text">
-                        <h1 class="skip-text" id="colored">Skip</h1> The Diet, Just Eat
+                        <span class="skip-text" id="colored">Skip</span> The Diet, Just Eat
                         Healthy With Jez Salad
                     </h1>
                     <p class="skip-text-under">
@@ -35,35 +35,38 @@
                     <button class="order-food-button" id="colored">Order Food</button>
                     <div class="header-stats">
                         <div class="header-stats">
-                            <p class="header-stats-text">5.000+</p>
+                            <span class="header-stats-text">5.000+</span>
                             <span class="header-stats-undertext">
                                 Customer
                             </span>
                         </div>
                         <div class="header-stats">
-                            <p class="header-stats-text">8.000+</p>
+                            <span class="header-stats-text">8.000+</span>
                             <span class="header-stats-undertext">
                                 Delivery
                             </span>
                         </div>
                         <div class="header-stats">
-                            <p class="header-stats-text">1.000+</p>
+                            <span class="header-stats-text">1.000+</span>
                             <span class="header-stats-undertext">
                                 Ratings
                             </span>
                         </div>
                     </div>
                 </section>
-                <section class="container-front-page-img">
+                <section class="container-first-page-img">
                     <img
+                        class="fifth-page-icon"
                         src="images/heart-icon.svg"
                         alt="background-heart-icon"
                     />
                     <img
+                        class="fifth-page-icon"
                         src="images/header-image.png"
                         alt="header-image-woman"
                     />
                     <img
+                        class="fifth-page-icon"
                         src="images/background-dots.svg"
                         alt="background-dots"
                     />
@@ -73,7 +76,7 @@
                         </aside>
                         <header class="customer-comment">
                             <p class="customer-comment-text">Our Happy Customer</p>
-                            <img src="images/star-icon.svg" alt="star-icon">
+                            <img class="customer-comment-star-icon" src="images/star-icon.svg" alt="star-icon">
                             <p class="customer-comment-text-rating">4.9</p>
                             <span class="customer-comment-text-reviews">(1.989 reviews)</span>
                         </header>
@@ -99,7 +102,7 @@
             <section class="container-second-page">
                 <section class="second-page-text">
                     <section class="second-page-text-big">
-                        <h1 class="second-page-text-1">WHY CHOOSE US FOR <h1 id="colored">YOUR HEALTY FOOD</h1></h1>
+                        <h1 class="second-page-text-1">WHY CHOOSE US FOR <span id="colored">YOUR HEALTY FOOD</span></h1>
                     </section>
                     <section class="second-page-text-small">
                         <p class="second-page-text-2">We continue to consistently choose and maintain the quality of the fruit served, so that it remains fresh and nutritious when you eat it.</p>
@@ -108,7 +111,7 @@
                 <section class="second-page-cards">
                     <article class="second-page-single-card">
                         <div class="card-photo-space">
-                            <img src="images/first-card-icon.svg" alt="card-1"/>
+                            <img class="second-page-card-icon" src="images/first-card-icon.svg" alt="card-1"/>
                         </div>
                         <div class="card-text">
                             <h2 class="card-text-main">Own fruit orchard</h2>
@@ -116,12 +119,12 @@
                         </div>
                         <div class="card-link-container">
                             <a href="#">Learn more</a>
-                            <img src="images/right-arrow.svg" alt="right-arrow"/>
+                            <img class="second-page-card-icon" src="images/right-arrow.svg" alt="right-arrow"/>
                         </div>
                     </article>
                     <article class="second-page-single-card">
                         <div class="card-photo-space">
-                            <img src="images/second-card-icon.svg" alt="card-2"/>
+                            <img class="second-page-card-icon" src="images/second-card-icon.svg" alt="card-2"/>
                         </div>
                         <div class="card-text">
                             <h2 class="card-text-main">#1 Healthy Fruit Salad</h2>
@@ -129,12 +132,12 @@
                         </div>
                         <div class="card-link-container" id="colored">
                             <a href="#">Learn more</a>
-                            <img src="images/right-arrow.svg" alt="right-arrow"/>
+                            <img class="card-right-arrow" src="images/right-arrow.svg" alt="right-arrow"/>
                         </div>
                     </article>
                     <article class="second-page-single-card">
                         <div class="card-photo-space">
-                            <img src="images/third-card-icon.svg" alt="card-3"/>
+                            <img class="card-right-arrow" src="images/third-card-icon.svg" alt="card-3"/>
                         </div>
                         <div class="card-text">
                             <h2 class="card-text-main">100 Top Brand</h2>
@@ -142,7 +145,7 @@
                         </div>
                         <div class="card-link-container">
                             <a href="#">Learn more</a>
-                            <img src="images/right-arrow.svg" alt="right-arrow"/>
+                            <img class="card-right-arrow" src="images/right-arrow.svg" alt="right-arrow"/>
                         </div>
                     </article>
                 </section>
@@ -168,7 +171,7 @@
                     <article class="third-page-single-card">
                         <div class="third-page-card">
                             <div class="third-page-card-photo-space">
-                                <img src="images/reviewer-1.svg" alt="reviewer-card-1"/>
+                                <img class="reviewer-icon" src="images/reviewer-1.svg" alt="reviewer-card-1"/>
                             </div>
                             <div class="third-page-card-text">
                                 <h2 class="reviwer-name">Selena Gomz</h2>
@@ -180,7 +183,7 @@
                     <article class="third-page-single-card">
                         <div class="third-page-card">
                             <div class="third-page-card-photo-space">
-                                <img src="images/reviewer-2.svg" alt="reviewer-card-2"/>
+                                <img class="reviewer-icon" src="images/reviewer-2.svg" alt="reviewer-card-2"/>
                             </div>
                             <div class="third-page-card-text">
                                 <h2 class="reviwer-name">David Ken</h2>
@@ -192,7 +195,7 @@
                     <article class="third-page-single-card">
                         <div class="third-page-card">
                             <div class="third-page-card-photo-space">
-                                <img src="images/reviewer-3.svg" alt="reviewer-card-3"/>
+                                <img class="reviewer-icon" src="images/reviewer-3.svg" alt="reviewer-card-3"/>
                             </div>
                             <div class="third-page-card-text">
                                 <h2 class="reviwer-name">Jennifer Sina</h2>
@@ -216,7 +219,7 @@
                     <article class="fourth-page-single-card">
                         <div class="fourth-page-card">
                             <div class="fourth-page-card-photo-space">
-                                <img src="images/dish-card-1.png" alt="alt-card-1"/>
+                                <img class="dish-card" src="images/dish-card-1.png" alt="alt-card-1"/>
                                 <div class="fourth-page-card-text-container">
                                     <h3 class="fourth-page-card-text">Mini Salad Yummy</h3>
                                     <h2 class="fourth-page-card-text-price">$ 2.99</h2>
@@ -227,7 +230,7 @@
                     <article class="fourth-page-single-card">
                         <div class="fourth-page-card">
                             <div class="fourth-page-card-photo-space">
-                                <img src="images/dish-card-2.png" alt="alt-card-2"/>
+                                <img class="dish-card" src="images/dish-card-2.png" alt="alt-card-2"/>
                                 <div class="fourth-page-card-text-container">
                                     <h3 class="fourth-page-card-text">Mini Salad Yummy</h3>
                                     <h2 class="fourth-page-card-text-price">$ 2.99</h2>
@@ -238,7 +241,7 @@
                     <article class="fourth-page-single-card">
                         <div class="fourth-page-card">
                             <div class="fourth-page-card-photo-space">
-                                <img src="images/dish-card-3.png" alt="alt-card-3"/>
+                                <img class="dish-card" src="images/dish-card-3.png" alt="alt-card-3"/>
                                 <div class="fourth-page-card-text-container">
                                     <h3 class="fourth-page-card-text">Mini Salad Yummy</h3>
                                     <h2 class="fourth-page-card-text-price">$ 2.99</h2>
@@ -250,7 +253,7 @@
             </section>
             <section class="fifth-page">
                 <section class="fifth-page-subscription">
-                    <img src="images/subscription-background-lines.svg" alt="subscription-background"/>
+                    <img class="subscription-background-image" src="images/subscription-background-lines.svg" alt="subscription-background"/>
                     <div class="fifth-page-subscription-small-main-text-container">
                         <h4 class="fifth-page-subscription-small-main-text" id="colored">Our Subscribe</h4>
                     </div>
@@ -279,37 +282,37 @@
             <footer id="footer">
                 <section id="copyright">
                     <div class="logo">
-                        <h3 class="logo-text"><h3 id="colored">JEZ</h3> SALAD</h3>
+                        <h3 class="logo-text"><span id="colored">JEZ</span> SALAD</h3>
                     </div>
                     <p class="footer-copyright-text">Jez Salad is the pioneer of healthy fruit salad with high nutrition.</p>
                     <p class="footer-copyright">©Copyright Jez Salad</p>
                 </section>
                 <nav id="footer-links">
-                    <a href="#" class="header-link" id="colored">Feature</a>
-                    <a href="#" class="header-link">Menu</a>
-                    <a href="#" class="header-link">Promo</a>
-                    <a href="#" class="header-link">Contact</a>
-                    <a href="#" class="header-link">About us</a>
+                    <a href="#" class="footer-link" id="colored">Feature</a>
+                    <a href="#" class="footer-link">Menu</a>
+                    <a href="#" class="footer-link">Promo</a>
+                    <a href="#" class="footer-link">Contact</a>
+                    <a href="#" class="footer-link">About us</a>
                 </nav>
                 <section id="get-in-touch">
                     <h3 class="get-in-touch-text" id="colored">Get in Touch</h3>
                     <div class="footer-location">
-                        <img src="images/location_icon.svg" alt="location-icon"/>
+                        <img class="footer-icon" src="images/location_icon.svg" alt="location-icon"/>
                         <p class="footer-location-text">8819 Ohio St. South Gate, CA 90280</p>
                     </div>
                     <div class="footer-email">
-                        <img src="images/email-icon.svg" alt="email-icon"/>
+                        <img class="footer-icon" src="images/email-icon.svg" alt="email-icon"/>
                         <p class="footer-email-text">Ourstudio@hello.com</p>
                     </div>
                     <div class="footer-phone">
-                        <img src="images/phone-icon.svg" alt="phone-icon"/>
+                        <img class="footer-icon" src="images/phone-icon.svg" alt="phone-icon"/>
                         <p class="footer-phone-text">+1 386-688-3295</p>
                     </div>
                 </section>
                 <section id="social-links">
-                    <a href=""><img src="images/twitter-icon.svg" alt="twitter-icon"/></a>
-                    <a href=""><img src="images/linkedin-icon.svg" alt="linkedin-icon"/></a>
-                    <a href=""><img src="images/insta-icon.svg" alt="insta-icon"/></a>
+                    <a href="#" class="footer-link"><img class="footer-icon" src="images/twitter-icon.svg" alt="twitter-icon"/></a>
+                    <a href="#" class="footer-link"><img class="footer-icon" src="images/linkedin-icon.svg" alt="linkedin-icon"/></a>
+                    <a href="#" class="footer-link"><img class="footer-icon" src="images/insta-icon.svg" alt="insta-icon"/></a>
                     <p class="footer-social-links-text">Follow our social media.</p>
                 </section>
             </footer>
