--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </section>
             <section class="container-third-page">
                 <section class="third-page-text">
-                    <h1 class="third-page-text-1">What Are People<br> Saying <h1 id="colored">About Us</h1></h1>
+                    <h1 class="third-page-text-1">What Are People<br> Saying <span id="colored">About Us</span></h1>
                     <p class="third-page-text-2">We are very happy if you are satisfied with our service and products, let's read pure reviews from customers who bought our products.</p>
                     <div class="third-page-cards-numeration">
                         <h1 class="third-page-cards-numeration-main">02</h1><span class="third-page-cards-numeration-second">/05</span>
@@ -212,7 +212,7 @@
                         <h3 class="fourth-page-text-small" id="colored">MENU YANG MEMBUATMU JATUH CINTA</h3>
                     </div>
                     <div class="fourth-page-text-big">
-                        <h1 class="fourth-page-text-big">ENJOY THE BEST MENU AND GET</h1><h1 id="colored">DISCOUNTS</h1><h1 class="fourth-page-text-big"> AVAILABLE</h1>
+                        <h1 class="fourth-page-text-big">ENJOY THE BEST MENU AND GET</h1><span id="colored">DISCOUNTS</span><h1 class="fourth-page-text-big"> AVAILABLE</h1>
                     </div>
                 </section>
                 <section class="fourth-page-cards">
