--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <div class="fifth-page-subscription-main-undertext-container">
                         <p class="fifth-page-subscription-main-undertext">We recommended you to subscribe to our promo program,<br> drop your email below to get daily update about us</p>
                     </div>
-                    <div class="fifth-page-subscription-email-input-container">
+                    <form class="fifth-page-subscription-email-input-container">
 
                         <!-- <div class="fifth-page-subscription-email-input">
                             <input type="email" id="email" placeholder="Enter your email address">
@@ -276,7 +276,7 @@
                         <input type="email" id="email" placeholder="Enter your email address">
                         <!-- <button id="colored">Subscribe</button> -->
                         <a id="colored" href="#">Subsribe</a>
-                    </div>
+                    </form>
                 </section>
             </section>
             <footer id="footer">
