deleted some comments

--- a/index.html
+++ b/index.html
@@ -264,17 +264,8 @@
                         <p class="fifth-block-subscription-main-undertext">We recommended you to subscribe to our promo program,<br> drop your email below to get daily update about us</p>
                     </div>
                     <form class="fifth-block-subscription-email-input-container">
-
-                        <!-- <div class="fifth-block-subscription-email-input">
-                            <input type="email" id="email" placeholder="Enter your email address">
-                        </div>
-                        <div class="fifth-block-subscription-email-submit">
-                            <button id="colored">Subscribe</button>
-                            <a id="colored" href="#">Subsribe</a>
-                        </div> -->
-
                         <input type="email" id="email" placeholder="Enter your email address">
-                        <!-- <button id="colored">Subscribe</button> -->
+                        <!-- <button id="colored" type="submit">Subscribe</button> -->
                         <a id="colored" href="#">Subsribe</a>
                     </form>
                 </section>
