--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <section class="container-first-block">
                 <section class="container-first-block-text">
                     <div class="#1-container">
-                        <p class="#1-container-text" id="colored">#1 Best Healthy Salad</p>
+                        <span class="#1-container-text" id="colored">#1 Best Healthy Salad</span>
                     </div>
                     <h1 class="first-block-text">
                         <span class="skip-text" id="colored">Skip</span> The Diet, Just Eat
