some little changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Webblock</title>
     </head>
     <body>
-        <header id="header">
+        <header class="header">
             <h3 class="logo-text"><span>JEZ</span> SALAD</h3>
             <nav class="header-nav">
                 <a href="#" class="header-link" >Home</a>
@@ -19,9 +19,7 @@
         <main class="main">
             <section class="container-first-block">
                 <section class="container-first-block-text">
-                    <div class="#1-container">
-                        <span class="#1-container-text" >#1 Best Healthy Salad</span>
-                    </div>
+                    <span class="#1-container-text" >#1 Best Healthy Salad</span>
                     <h1 class="first-block-text">
                         <span class="skip-text" >Skip</span> The Diet, Just Eat
                         Healthy With Jez Salad
@@ -217,11 +215,9 @@
                         <button type="submit">Subscribe</button>
                     </form>
             </section>
-            <footer id="footer">
+            <footer class="footer">
                 <section class="logo">
-                    <div class="logo">
-                        <h3 class="logo-text"><span >JEZ</span> SALAD</h3>
-                    </div>
+                    <h3 class="logo-text"><span >JEZ</span> SALAD</h3>
                     <span class="footer-copyright-text">Jez Salad is the pioneer of healthy fruit salad with high nutrition.</span>
                     <span class="footer-copyright">©Copyright Jez Salad</span>
                 </section>
