--- a/index.html
+++ b/index.html
@@ -175,12 +175,11 @@
                         <p class="third-block-cards-numeration-main">02</p><span class="third-block-cards-numeration-second">/ 05</span>
                     </div>
                     <div class="third-block-cards-arrows">
-                        <!-- єсі що не видно стрілку вліво бо вона сама біла -->
                         <div class="third-block-cards-left-arrow">
                             <img class="third-block-not-activated-arrow" src="images/left-arrow.svg" alt="left-arrow"/>
                         </div>
                         <div class="third-block-cards-right-arrow">
-                            <img class="third-block-activated-arrow" src="images/right-arrow.svg" alt="right-arrow"/>
+                            <img class="third-block-activated-arrow" src="images/white-right-arrow.svg" alt="right-arrow"/>
                         </div>
                     </div>
                 </section>
@@ -214,7 +213,7 @@
             <section class="fourth-block">
                 <section class="fourth-block-text">
                     <h3 class="fourth-block-text-small" >MENU YANG MEMBUATMU JATUH CINTA</h3>
-                    <h1 class="fourth-block-text-big">ENJOY THE BEST MENU AND GET</h1><span >DISCOUNTS</span><h1 class="fourth-block-text-big"> AVAILABLE</h1>
+                    <h1 class="fourth-block-text-big">ENJOY THE BEST MENU AND GET<br> </h1><span >DISCOUNTS</span><h1 class="fourth-block-text-big"> AVAILABLE</h1>
                 </section>
                 <section class="fourth-block-cards">
                     <article class="fourth-block-single-card">
@@ -241,7 +240,7 @@
                 </section>
             </section>
             <section class="fifth-block">
-                    <img class="subscription-background-image" src="images/subscription-background-lines.svg" alt="subscription-background"/>
+                <div class="fifth-block-container">
                     <h4 class="fifth-block-subscription-small-main-text" >Our Subscribe</h4>
                     <h2 class="fifth-block-subscription-big-main-text">Subscribe To Get The Latest<br>Promo from Jez Salad</h2>
                     <p class="fifth-block-subscription-main-undertext">We recommended you to subscribe to our promo program,<br> drop your email below to get daily update about us</p>
@@ -249,6 +248,8 @@
                         <input type="email" id="email" placeholder="Enter your email address">
                         <button type="submit">Subscribe</button>
                     </form>
+
+                </div>
             </section>
             <footer class="footer">
                 <section class="logo">
@@ -279,9 +280,11 @@
                     </div>
                 </section>
                 <section class="social-links">
-                    <a href="#" class="footer-link"><img class="footer-icon" src="images/twitter-icon.svg" alt="twitter-icon"/></a>
-                    <a href="#" class="footer-link"><img class="footer-icon" src="images/linkedin-icon.svg" alt="linkedin-icon"/></a>
-                    <a href="#" class="footer-link"><img class="footer-icon" src="images/insta-icon.svg" alt="insta-icon"/></a>
+                    <div class="social-icons">
+                        <a href="#" class="footer-link"><img src="images/twitter-icon.svg" alt="Twitter"/></a>
+                        <a href="#" class="footer-link"><img src="images/linkedin-icon.svg" alt="LinkedIn"/></a>
+                        <a href="#" class="footer-link"><img src="images/insta-icon.svg" alt="Instagram"/></a>
+                    </div>
                     <span class="footer-social-links-text">Follow our social media.</span>
                 </section>
             </footer>
